# PracticalVulkan

./: .gitignore  README.md
Project/: CMakeLists.txt  build.bat  compile_shaders.bat
Project/Common/: GUI.cpp  GUI.h  ListOfFunctions.inl  OperatingSystem.cpp  OperatingSystem.h  SampleCommon.cpp  SampleCommon.h  Timer.cpp  Timer.h  Tools.cpp  Tools.h  VulkanCommon.cpp  VulkanCommon.h  VulkanFunctions.cpp  VulkanFunctions.h  main.cpp
Project/Common/Data/: gui.frag  gui.frag.spv  gui.frag.spv.txt  gui.vert  gui.vert.spv  gui.vert.spv.txt
Project/Samples/01 - Frame Resources Count/: Sample.cpp  Sample.h
Project/Samples/01 - Frame Resources Count/Data/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert  shader.vert.spv  shader.vert.spv.txt
